<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tienda">

    <fragment
        android:id="@+id/nav_tienda"
        android:name="cat.paucasesnoves.mtkgames.ui.tienda.TiendaFragment"
        android:label="@string/titulo_tienda"
        tools:layout="@layout/fragment_tienda" />
    <fragment
        android:id="@+id/nav_iniciar"
        android:name="cat.paucasesnoves.mtkgames.ui.iniciar.IniciarFragment"
        android:label="@string/iniciar_sesion"
        tools:layout="@layout/fragment_iniciar" />
    <fragment
        android:id="@+id/nav_registro"
        android:name="cat.paucasesnoves.mtkgames.ui.registro.RegistroFragment"
        android:label="@string/registro"
        tools:layout="@layout/fragment_registro" />
</navigation>